[gd_scene load_steps=4 format=2]

[ext_resource path="res://Home.gd" type="Script" id=1]
[ext_resource path="res://DrawingEditor.tscn" type="PackedScene" id=2]
[ext_resource path="res://red_trash_can.png" type="Texture" id=3]

[node name="Home" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
max_columns = 1000
same_column_width = true
icon_scale = 0.125
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawingEditor" parent="." instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -64.0
margin_right = 160.0
rect_clip_content = true
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddDrawingButton" type="Button" parent="HBoxContainer"]
margin_right = 248.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Add Drawing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSelectedButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 258.0
margin_right = 320.0
margin_bottom = 64.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteDrawingConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -70.0
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 400, 140 )
popup_exclusive = true
dialog_text = "Are you sure you want to delete this drawing?"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_activated" from="ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="to_home" from="DrawingEditor" to="." method="_on_DrawingEditor_to_home"]
[connection signal="button_up" from="HBoxContainer/AddDrawingButton" to="." method="_on_AddDrawingButton_button_up"]
[connection signal="button_up" from="HBoxContainer/DeleteSelectedButton" to="." method="_on_DeleteSelectedButton_button_up"]
[connection signal="confirmed" from="DeleteDrawingConfirmationDialog" to="." method="_on_DeleteDrawingConfirmationDialog_confirmed"]
